<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="stStation01_Components" Id="{188241ee-694f-4289-9db7-14ee0d1e0d7e}">
    <Declaration><![CDATA[{attribute wpf [Container(Layout.Stack)]}
TYPE stStation01_Components :
STRUCT
	{attribute addProperty Name "Sensor X"}
	SensorX : REAL;
	
	{attribute wpf [Container(Layout.Wrap)]}
	{attribute addProperty Name "Upper piston sensor"}
	PistonUpPosition AT %I* : BOOL;
	{attribute addProperty Name "Bottom piston sensor"}
	PistonDownPosition AT %I* : BOOL;
	
	{attribute wpf [Container(Layout.Wrap)]}
	{attribute addProperty Name "Move up piston singal"}
	MovePistonUp AT %Q* : BOOL;
	{attribute addProperty Name "Move down piston singal"}
	MovePistonDown AT %Q* : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>