<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="stStation01_Data" Id="{96aefded-b379-4d7f-904b-c83bf4a4589a}">
    <Declaration><![CDATA[{attribute wpf [Container(Layout.Stack)]}
TYPE stStation01_Data :
STRUCT
	{attribute addProperty Name "X Min"}
	DimXMin : REAL;	
	{attribute clr [ReadOnly()]}
	{attribute addProperty Name "X Measured"}
	DimXMeasured : REAL;	
	{attribute addProperty Name "X Max"}
	DimXMax : REAL;
	{attribute addProperty Name "Result"}
	Result : STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>