<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <POU Name="fbStation01" Id="{7019b3bd-9403-470a-9803-08481d4bb24e}" SpecialFunc="None">
    <Declaration><![CDATA[{attribute wpf [Container(Layout.Stack)]}
{attribute wpf [Group(Layout.Scroll)]}
{attribute addProperty Name "ST 01"}
FUNCTION_BLOCK fbStation01
VAR	
	{attribute wpf [Container(Layout.Wrap)]}
	{attribute addProperty Name "Step Number"}
	{attribute clr [ReadOnly()]}
	_step : INT;
	{attribute addProperty Name "Step description"}
	{attribute clr [ReadOnly()]}
	_stepDescription : STRING;
	{attribute wpf [Container(Layout.Wrap)]}	
	{attribute addProperty Name "Data"}
	_data : stStation01_Data;
	{attribute addProperty Name "Components"}
	_components : stStation01_Components;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[CASE _step OF
	0:	_stepDescription := 'Moving piston down';
	
		_components.MovePistonDown := TRUE;
		_components.MovePistonUp := FALSE;
		
		IF(_components.PistonDownPosition) THEN
			_step := 10;
		END_IF
	10: _stepDescription := 'Taking measures';
		_data.DimXMeasured := _components.SensorX;
		IF(_data.DimXMin <= _data.DimXMeasured AND
			_data.DimXMeasured <= _data.DimXMax) THEN	
			_data.Result := 'ALL OK';
		ELSE
			_data.Result := 'THIS IS NOT OK';
		END_IF
		_step := 20;
	20: _stepDescription := 'Moving piston up';
		_components.MovePistonUp := TRUE;
		_components.MovePistonDown := FALSE;
		IF(_components.PistonUpPosition) THEN
			_step := 0;
		END_IF			
END_CASE

]]></ST>
    </Implementation>
    <LineIds Name="fbStation01">
      <LineId Id="61" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="93" Count="0" />
      <LineId Id="67" Count="0" />
      <LineId Id="90" Count="0" />
      <LineId Id="92" Count="0" />
      <LineId Id="68" Count="3" />
      <LineId Id="73" Count="5" />
      <LineId Id="72" Count="0" />
      <LineId Id="85" Count="0" />
      <LineId Id="79" Count="0" />
      <LineId Id="81" Count="0" />
      <LineId Id="91" Count="0" />
      <LineId Id="82" Count="1" />
      <LineId Id="80" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="45" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>